--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/ui-react-native": "^1.2.25",
+    "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-native-community/netinfo": "^9.4.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "amazon-cognito-identity-js": "^6.3.2",
+    "aws-amplify": "^5.3.7",
+    "aws-amplify-react-native": "^7.0.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^5.7.0",
-    "react-native-safe-area-context": "^4.5.1",
+    "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.20.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
