--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -18,7 +18,7 @@
     }
   },
   "auth": {
-    "scripttracker16963b3d": {
+    "scripttrackerfc5d8ecf": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
@@ -31,11 +31,13 @@
           "passwordPolicyMinLength": 8
         },
         "signupAttributes": [
-          "EMAIL"
+          "EMAIL",
+          "NAME"
         ],
         "socialProviders": [],
         "usernameAttributes": [
-          "EMAIL"
+          "EMAIL",
+          "PHONE_NUMBER"
         ],
         "verificationMechanisms": [
           "EMAIL"
