--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/ui-react-native": "^1.2.25",
     "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-firebase/app": "^18.5.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
